<resources>
    <string name="app_name">bankingApp</string>
    <string name="bankNameTitle">Banking App</string>
    <string name="loginTextField" />
    <string name="passwordTextField" />
    <string name="usernameTextView">Username</string>
    <string name="passwordTextView">Password</string>
    <string name="signInButton">Sign In</string>
    <string name="appNameTextView">Main Menu</string>
    <string name="toggleButton" />
    <string name="nameTextFieldHint">Please Enter Client\'s name</string>
    <string name="nameTextField" />
    <string name="descriptionTextFieldHint">Enter type of account</string>
    <string name="descriptionTextField" />
    <string name="addressTextFieldHint"> Street Address</string>
    <string name="addressTextField" />
    <string name="cityTextFieldHint">City</string>
    <string name="cityTextField" />
    <string name="stateTextFieldHint">State</string>
    <string name="stateTextField" />
    <string name="locationCodeTextFieldHint">Location</string>
    <string name="locationCodeTextField" />
    <string name="locationPhoneTextFieldHint">Location Phone</string>
    <string name="locationPhoneTextField" />
    <string name="locationManagerTextFieldHint">Location Manager</string>
    <string name="locationManagerTextField" />
    <string name="dateOfConfigurationTextFieldHint">Date of Configuration</string>
    <string name="dateOfConfigurationTextField" />
    <string name="zipCodeTextFieldHint">Zip Code</string>
    <string name="zipCodeTextField" />
    <string name="activitySwitchConfirmation" />
    <string name="mainMenuTempString">This is the main menu of the app. It will display a scrollTextView that includes banners relevant to the WeekOneDeliverable. TextField inputs for the weekTwoDeliverable are on the Accounts page, accessible at the bottom of the screen.</string>
    <string name="accountsTitleTextView">Create an Account</string>
    <string name="clientNameTextField">Name</string>
    <string name="accountFirstNameTextField" />
    <string name="accountsMiddleInitialTextField" />
    <string name="accountLastNameTextField" />
    <string name="accountFirstNameHint">First Name</string>
    <string name="accountLastNameHint">Last Name</string>
    <string name="accountsMiddleInitialHint">M.I.</string>
    <string name="addressDateOfBirthTextField" />
    <string name="AccountsDateOfBirthHint">dd/mm/yyyy</string>
    <string name="accountsNameTextView">Name</string>
    <string name="accountsDOBTextView">Date of Birth</string>
    <string name="accountsSSNTextField" />
    <string name="accountsSSNHint">example@gmail.com</string>
    <string name="accountsSSNTextView">Email Address</string>
    <string name="accountsAddressTextField" />
    <string name="accountsAddressTextView">Address</string>
    <string name="accountsCityTextField" />
    <string name="accountsStateTextField" />
    <string name="accountsZipCodeTextField" />
    <string name="settingsTempString">This Screen will include options to make adjustments to a user\'s profile. This page may be replaced with a different feature, as we can include this as a dropdown option for the profile icon in the top right corner of the main menu.</string>
    <string name="transferTempString">This page will include options for sending and receiving money to/from other users.</string>
    <string name="createAccountButton">Create Account</string>
    <string name="accountsCreateAccountButton">Create Account</string>
    <string name="loginTempString">This is the login screen, behavior must still be added. Click \"Sign In\" to proceed to the main menu.</string>
    <string name="createAnAccountButton">Create an Account</string>
    <string name="forgotPasswordButton">Forgot Password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>